<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/abc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Menu">
    <TextView
        android:id="@+id/Breakfast"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textAllCaps="true"/>
    <TextView

        android:id="@+id/Lunch"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lunch"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/Dinner"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

</LinearLayout>