<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu" >

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolBar"/>
    <com.google.android.material.tabs.TabLayout
        app:tabTextColor="#FFFFFF"
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/colorPrimary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner" />
    </com.google.android.material.tabs.TabLayout>
</com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</RelativeLayout>
