<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    android:theme="@style/Platform.MaterialComponents"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/mainToolBar"
                layout="@layout/toolbar" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Monday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/monday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Tuesday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/tuesday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Wednesday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/wednesday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Thursday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/thursday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Friday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/friday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Saturday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/saturday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Sunday"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="right"
            android:padding="15dp"
            android:singleLine="true"
            android:text="@string/sunday"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="6dp" />

    </LinearLayout>
</ScrollView>